issue #6: Second nav fixed bottom on mobile

--- a/src/components/elements/Nav/NavLink/styles.module.scss
+++ b/src/components/elements/Nav/NavLink/styles.module.scss
@@ -4,13 +4,12 @@
   letter-spacing: 1px;
   padding: 8px;
   opacity: 0.6;
+  background-color: var(--c-background-200);
 
   display: inline-block;
   position: relative;
 
   transition: opacity 1000ms ease-in-out;
-  
-  & + .link { margin-left: 8px; }
 
   &::before,
   &::after {
@@ -62,5 +61,9 @@
 
     &::before { bottom: 0 }
     &::after { top: 0 }
+  }
+
+  @media(min-width: 1024px) { 
+    & + .link { margin-left: 8px; }
   }
 } 
