--- a/src/components/elements/Nav/styles.module.scss
+++ b/src/components/elements/Nav/styles.module.scss
@@ -1,13 +1,24 @@
 .nav {
-  width: calc(100% + 8px);
-  margin-left: -8px;
+  width: 100vw;
   overflow-x: scroll;
   white-space: nowrap;
-  padding-bottom: 24px;
-  
-  position: relative;
+  background: var(--c-background-200);
+  padding: 16px 8px 24px 8px;
+  z-index: 2;
+  box-shadow: 0 -36px 36px var(--c-background-100);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
   
   a { display: inline-block; }
+
+  &.dark { box-shadow: 0 -36px 36px var(--c-background-200); }
 
   &::-webkit-scrollbar { height: 4px; }
   
@@ -23,17 +34,19 @@
     &:hover { background-color: var(--c-candy-red); }
   }
 
+  @media (min-width: 1024px) {
+    width: calc(100% + 8px);
+    margin-left: -8px;
+    padding-bottom: 24px;
+    
+    position: relative;
+    bottom: unset;
+    left: unset;
+    transform: none;
 
-  // &::after {
-  //   content: ' → ';
-  //   line-height: 0;
-  //   position: sticky;
-  //   top: 0;
-  //   right: 0;
-  //   height: 100%;
-  //   width: 100%;
-  //   padding: 12px;
-  //   pointer-events: none;
-  //   background: linear-gradient(90deg, transparent 0%, var(--c-background-200) 80%);
-  // }
+    justify-content: flex-start;
+
+    background: transparent;
+    box-shadow: none;
+  }
 }
